@@ -22,3 +22,4 @@ include trytond/res/view/*.xml
 include trytond/res/locale/*.po
 include trytond/tests/tryton.cfg
 include trytond/tests/*.xml
+include trytond/tests/forbidden.txt
